Fixed header. Setup firebase and imported hero images

--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -28,17 +28,37 @@ a {
   text-align: center;
 }
 
+.HeroImage{
+  max-width: 600px;
+  margin: 0 auto;
+  margin-top: 65px;
+  text-align: center;
+}
+
+.Hero svg {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
+
+
 .Hero h1 {
   margin: 0;
   color: white;
   font-size: 60px;
   line-height: 1.2;
+  animation: HeroAnimation 3s 0.1s forwards cubic-bezier(0.2, 0.8, 0.2, 1);
+  opacity: 0;
 }
 
 .Hero p {
   font-size: 30px;
   line-height: 1.5;
   color: rgba(255,255,255, 0.8);
+  animation: HeroAnimation 3s 0.2s forwards cubic-bezier(0.2, 0.8, 0.2, 1);
+  opacity: 0;
+
 }
 
 .Hero a {
@@ -50,6 +70,12 @@ a {
   padding: 9px 20px;
   border: 1px solid rgba(255, 255, 255, 0);
   border-radius: 20px;
+  transition: 0.8s cubic-bezier(0.2, 0.8, 0.2, 1);
+}
+
+.Hero a:hover {
+  background: #00bd6e;
+  color: white;
 }
 @media (max-width: 640px) {
   .HeroGroup {
@@ -64,3 +90,15 @@ a {
     font-size: 24px;
   }
 }
+
+@keyframes HeroAnimation {
+  0% {
+      opacity: 0;
+      transform: translateY(20px)
+  }
+  100% {
+      opacity: 1;
+      transform: translateY(0px)
+  }
+}
+
