--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -3,23 +3,39 @@
     width: 100%;
     padding: 50px 0;
     z-index: 100;
+    display: flex;
+}
+
+.HeaderImage{
+    margin-left: 50px;
 }
 
 .HeaderGroup {
-    max-width: auto;
-    margin: 0 auto;
+    max-width: 800px;
     text-align: center;
     display: grid;
-    grid-template-columns: repeat(5, auto);
+    grid-template-columns: repeat(4, 150px);
     align-items: center;
     justify-items: right;
-    grid-template-columns: auto auto auto auto auto;
+    margin-right: 50px;
+    margin-left: auto;   
 }
+
 
 .Header a {
     color: white;
-    font-weight: 700;
+    font-weight: 300;
 }
+
+.Hero {
+    position: relative;
+  }
+  
+  .Hero svg {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+  }
 
 .Header button {
     padding: 8px 20px;
@@ -31,6 +47,16 @@
     font-weight: 700;
     outline: none;
     cursor: pointer;
+    transition: 0.8s cubic-bezier(0.2, 0.8, 0.2, 1.0);
+    box-shadow: 0 10px 20px rgba(0,0,0, 0.25);
+}
+
+.Header button:hover {
+    background: #00bd6e;
+    color: white;
+    box-shadow: 0 10px 20px rgba(0,0,0, 0.25);
+    transform: translateY(-3px);
+    
 }
 
 @media (max-width: 640px) {
@@ -39,10 +65,10 @@
     }
 
     .HeaderGroup {
-        grid-template-columns: repeat(4, auto);
+        grid-template-columns: repeat(3, auto);
     }
 
-    .Header a:nth-child(4) {
+    .Header a:nth-child(3) {
         display: none;
     }
 }
