--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -24,7 +24,9 @@ a {
 .HeroGroup {
   max-width: 600px;
   margin: 0 auto;
-  padding: 150px 50px;
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-top: 150px;
   text-align: center;
 }
 
@@ -79,7 +81,9 @@ a {
 }
 @media (max-width: 640px) {
   .HeroGroup {
-    padding: 100px 20px;
+    padding-top: 100px;
+    padding-left: 20px;
+    padding-right: 20px;
   }
 
   .Hero h1 {
