Finished Testimonial section and google analytics. Might make some small design changes but mostly done

--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -257,6 +257,35 @@ a {
   float: none;
 }
 
+.Testimonial{
+  background-color: black;
+  color: white;
+  margin: 0 auto;
+  text-align: center;
+  max-width:550px;
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+.Testimonial p{
+  color: white;
+  font-size: 25px;
+  margin-bottom: 10px;
+}
+
+.Testimonial p#testimonial-name{
+  font-size: 15px;
+  margin-top: 0;
+}
+
+.Testimonial img#confetti-1{
+  float: left;
+}
+
+.Testimonial img#confetti-2{
+  float: right;
+  transform: rotate(80deg);
+}
 
 
 
